# HydraContext

./: ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  FEATURES_ANALYSIS.md  QUICK_REFERENCE.md  README.md  cross_model_communication_verified.txt  pyproject.toml  setup.py  test_cross_model_communication.py  test_integration.py
.github/workflows/: lint.yml  test.yml
examples/: multi_provider_normalization.py  programmatic_usage.py  structured_fidelity_control.py
hydracontext/: __init__.py  api.py
hydracontext/core/: bidirectional.py  exceptions.py  prompt_processor.py  provider_parsers.py  response_processor.py  structured_parser.py  text_utils.py
hydracontext/utils/: logger.py
tests/: test_bidirectional.py  test_prompt_processor.py  test_response_processor.py  test_structured_parser.py
