[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hydracontext"
version = "0.1.0"
description = "LLM context processing: bidirectional normalization, prompt/response processing, and intelligent text segmentation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HydraContext Contributors"}
]
keywords = [
    "llm",
    "context",
    "normalization",
    "prompt-processing",
    "response-parsing",
    "openai",
    "anthropic",
    "ollama",
    "chunking",
    "segmentation",
    "deduplication",
    "nlp",
    "ai",
    "multi-provider"
]

[project.urls]
Homepage = "https://github.com/BenevolentJoker-JohnL/HydraContext"
Repository = "https://github.com/BenevolentJoker-JohnL/HydraContext"
Issues = "https://github.com/BenevolentJoker-JohnL/HydraContext/issues"
Discussions = "https://github.com/BenevolentJoker-JohnL/HydraContext/discussions"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
hydracontext = "hydracontext.cli.main:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=hydracontext --cov-report=term-missing"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Skip assert_used check

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.3.0",
]
